add alt to img and AOS

--- a/cases-article.html
+++ b/cases-article.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/script.js"></script>
     <title>Статья</title>
 </head>
@@ -42,7 +45,7 @@
             <header>
                 <div class="header__block">
                     <div class="logo">
-                        <img src="./img/logo.svg" width="65" height="65">
+                        <img src="./img/logo.svg" alt="Logo" width="65" height="65">
                     </div>
                     <nav class="nav__desktop">
                         <ul>
@@ -56,15 +59,15 @@
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel" width="44"
                             height="44"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="44" height="44"></a>
                 </div>
                 <div class="menu__burger">
                     <button class="menu__button" id="nav__menu__open">
-                        <img class="burger" src="./img/burger.svg">
+                        <img class="burger" src="./img/burger.svg" alt="Mobile menu">
                     </button>
                 </div>
             </header>
@@ -72,8 +75,8 @@
     </div>
 
     <div class="row">
-        <img class="cases__main__image" src="./img/Mask group.png" width="1570" height="400">
-        <img class="cases__main__image__mobile" src="./img/Mask group main mobile.png" width="360" height="210">
+        <img class="cases__main__image" src="./img/Mask group.png" alt="cases main image" width="1570" height="400">
+        <img class="cases__main__image__mobile" src="./img/Mask group main mobile.png" alt="cases main image mobile" width="360" height="210">
         <div class="container">
             <div class="recall__link">
                 <a href="./cases.html">← Назад к кейсам</a>
@@ -85,19 +88,19 @@
         <div class="container">
             <div class="cases__body">
                 <div class="cases__text__block">
-                    <div class="portfolio cases__main__title">
+                    <div class="portfolio cases__main__title" data-aos="fade-up" data-aos-delay="400">
                         Подготовка методичек<br>
                         для Webinar Group
                     </div>
-                    <div class="cases__text">
+                    <div class="cases__text" data-aos="fade-up">
                         На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
                         которые я решал. По ним можно посмотреть, как я пишу статьи, беру
                         интервью или делаю посадочные страницы.
                     </div>
-                    <div class="cases__title">
+                    <div class="cases__title" data-aos="fade-up">
                         О магазинах в Телеграм
                     </div>
-                    <div class="cases__text secondary__color">
+                    <div class="cases__text secondary__color" data-aos="fade-up">
                         На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
                         которые я решал. По ним можно посмотреть, как я пишу статьи, беру
                         интервью или делаю посадочные страницы. На этой странице собраны
@@ -106,17 +109,17 @@
                         страницы.
                     </div>
                 </div>
-                <div class="cases__image">
-                    <img src="./img/Mask group2.png" width="960" height="257">
+                <div class="cases__image" data-aos="fade-up">
+                    <img src="./img/Mask group2.png" alt="cases image" width="960" height="257">
                 </div>
-                <div class="cases__image__mobile">
-                    <img src="./img/Mask group mobile.png" width="340" height="200">
+                <div class="cases__image__mobile" data-aos="fade-up">
+                    <img src="./img/Mask group mobile.png" alt="cases image mobile" width="340" height="200">
                 </div>
                 <div class="cases__text__block">
-                    <div class="cases__title">
+                    <div class="cases__title" data-aos="fade-up">
                         О магазинах в Телеграм
                     </div>
-                    <div class="cases__text secondary__color">
+                    <div class="cases__text secondary__color" data-aos="fade-up">
                         На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
                         которые я решал. По ним можно посмотреть, как я пишу статьи, беру
                         интервью или делаю посадочные страницы. На этой странице собраны
@@ -125,17 +128,17 @@
                         страницы.
                     </div>
                 </div>
-                <div class="cases__image">
-                    <img src="./img/Mask group2.png" width="960" height="257">
+                <div class="cases__image" data-aos="fade-up">
+                    <img src="./img/Mask group2.png" alt="cases image" width="960" height="257">
                 </div>
-                <div class="cases__image__mobile">
-                    <img src="./img/Mask group mobile.png" width="340" height="200">
+                <div class="cases__image__mobile" data-aos="fade-up">
+                    <img src="./img/Mask group mobile.png" alt="cases image mobile" width="340" height="200">
                 </div>
                 <div class="cases__text__block">
-                    <div class="cases__title">
+                    <div class="cases__title" data-aos="fade-up">
                         О магазинах в Телеграм
                     </div>
-                    <div class="cases__text last secondary__color">
+                    <div class="cases__text last secondary__color" data-aos="fade-up">
                         На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
                         которые я решал. По ним можно посмотреть, как я пишу статьи, беру
                         интервью или делаю посадочные страницы. На этой странице собраны
@@ -151,34 +154,40 @@
 
     <div class="row">
         <div class="container">
-            <div class="contacts">
+            <div class="contacts" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel"
+                            width="68" height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="68"
                             height="68"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="68"
+                            height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="68"
+                            height="68"></a>
                 </div>
                 <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
-            <div class="contacts__mobile">
+            <div class="contacts__mobile" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
-                                width="50" height="50"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg"
+                                alt="YouTube channel" width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="50"
+                                height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook"
+                                alt="Facebook" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="50"
+                                height="50"></a>
                     </div>
                     <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
             </div>
-            <div class="contacts__note">
+            <div class="contacts__note" data-aos="zoom-in">
                 *Meta признана экстремистской организацией
             </div>
-            <div class="contacts__note__mobile">
+            <div class="contacts__note__mobile" data-aos="zoom-in">
                 *Meta признана экстремистской<br>
                 организацией
             </div>
