--- a/cases.html
+++ b/cases.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/script.js"></script>
     <title>Кейсы</title>
 </head>
@@ -42,7 +45,7 @@
             <header>
                 <div class="header__block">
                     <div class="logo">
-                        <img src="./img/logo.svg" width="65" height="65">
+                        <img src="./img/logo.svg" alt="Logo" width="65" height="65">
                     </div>
                     <nav class="nav__desktop">
                         <ul>
@@ -56,15 +59,15 @@
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel" width="44"
                             height="44"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="44" height="44"></a>
                 </div>
                 <div class="menu__burger">
                     <button class="menu__button" id="nav__menu__open">
-                        <img class="burger" src="./img/burger.svg">
+                        <img class="burger" src="./img/burger.svg" alt="Mobile menu">
                     </button>
                 </div>
             </header>
@@ -100,49 +103,49 @@
     <div class="row row-alternative-color">
         <div class="container">
             <div class="portfolio__body">
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-right" data-aos-delay="400" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" alt="Подготовка методичек для Webinar Group" width="304" height="169"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
                     </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-right" data-aos-delay="400" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" alt="Статья для агентства Альтопромо" width="272" height="259"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Статья для агентства Альтопромо</a>
                     </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-right" data-aos-delay="400" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" alt="Статья для блога Академии MAED" width="292" height="167"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Статья для блога Академии MAED</a>
                     </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-left" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" alt="Подготовка методичек для Webinar Group" width="304" height="169"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
                     </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-left" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" alt="Статья для агентства Альтопромо" width="272" height="259"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Статья для агентства Альтопромо</a>
                     </div>
                 </div>
-                <div class="portfolio__block">
+                <div class="portfolio__block" data-aos="zoom-in-left" data-aos-duration="1000">
                     <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" alt="Статья для блога Академии MAED" width="292" height="167"></a>
                     </div>
                     <div class="image__description">
                         <a href="./cases-article.html">Статья для блога Академии MAED</a>
@@ -154,34 +157,40 @@
 
     <div class="row">
         <div class="container">
-            <div class="contacts">
+            <div class="contacts" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel"
+                            width="68" height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="68"
                             height="68"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="68"
+                            height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="68"
+                            height="68"></a>
                 </div>
                 <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
-            <div class="contacts__mobile">
+            <div class="contacts__mobile" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
-                                width="50" height="50"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg"
+                                alt="YouTube channel" width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="50"
+                                height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook"
+                                alt="Facebook" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="50"
+                                height="50"></a>
                     </div>
                     <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
             </div>
-            <div class="contacts__note">
+            <div class="contacts__note" data-aos="zoom-in">
                 *Meta признана экстремистской организацией
             </div>
-            <div class="contacts__note__mobile">
+            <div class="contacts__note__mobile" data-aos="zoom-in">
                 *Meta признана экстремистской<br>
                 организацией
             </div>
