--- a/services.html
+++ b/services.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/script.js"></script>
     <title>Услуги</title>
 </head>
@@ -40,7 +43,7 @@
             <header>
                 <div class="header__block">
                     <div class="logo">
-                        <img src="./img/logo.svg" width="65" height="65">
+                        <img src="./img/logo.svg" alt="Logo" width="65" height="65">
                     </div>
                     <nav class="nav__desktop">
                         <ul>
@@ -54,15 +57,15 @@
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel" width="44"
                             height="44"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="44" height="44"></a>
                 </div>
                 <div class="menu__burger">
                     <button class="menu__button" id="nav__menu__open">
-                        <img class="burger" src="./img/burger.svg">
+                        <img class="burger" src="./img/burger.svg" alt="Mobile menu">
                     </button>
                 </div>
             </header>
@@ -99,8 +102,8 @@
     <div class="row">
         <div class="container">
             <div class="activity">
-                <div class="activity__block">
-                    <img src="./img/process.png" width="360" height="360">
+                <div class="activity__block" data-aos="fade-left" data-aos-delay="400">
+                    <img src="./img/process.png" alt="process image" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Выстраиваю редакции и процессы</h2>
                         <h2 class="text__title__mobile">
@@ -128,8 +131,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="activity__block">
-                    <img src="./img/analysis.png" width="360" height="360">
+                <div class="activity__block" data-aos="fade-right">
+                    <img src="./img/analysis.png" alt="analysis image" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">
                             Пишу, редактирую и анализирую контент
@@ -159,8 +162,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="activity__block">
-                    <img src="./img/conferention.png" width="360" height="360">
+                <div class="activity__block" data-aos="fade-left">
+                    <img src="./img/conferention.png" alt="conferention image" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">
                             Выступаю на конференциях<br>
@@ -195,8 +198,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="activity__block">
-                    <img src="./img/consulting.png" width="360" height="360">
+                <div class="activity__block" data-aos="fade-right">
+                    <img src="./img/consulting.png" alt="consulting image" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Консультирую и помогаю учиться</h2>
                         <h2 class="text__title__mobile">
@@ -224,8 +227,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="activity__block">
-                    <img src="./img/blog.png" width="360" height="360">
+                <div class="activity__block" data-aos="fade-left">
+                    <img src="./img/blog.png" alt="blog image" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Веду свой блог</h2>
                         <h2 class="text__title__mobile">Веду свой блог</h2>
@@ -253,36 +256,42 @@
         </div>
     </div>
 
-     <div class="row">
+    <div class="row">
         <div class="container">
-            <div class="contacts">
+            <div class="contacts" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel"
+                            width="68" height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="68"
                             height="68"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="68"
+                            height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="68"
+                            height="68"></a>
                 </div>
                 <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
-            <div class="contacts__mobile">
+            <div class="contacts__mobile" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
-                                width="50" height="50"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg"
+                                alt="YouTube channel" width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="50"
+                                height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook"
+                                alt="Facebook" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="50"
+                                height="50"></a>
                     </div>
                     <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
             </div>
-            <div class="contacts__note">
+            <div class="contacts__note" data-aos="zoom-in">
                 *Meta признана экстремистской организацией
             </div>
-            <div class="contacts__note__mobile">
+            <div class="contacts__note__mobile" data-aos="zoom-in">
                 *Meta признана экстремистской<br>
                 организацией
             </div>
