--- a/speeches.html
+++ b/speeches.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/script.js"></script>
     <title>Выступления</title>
 </head>
+
 <body>
     <div class="row header">
         <div class="menu__mobile" style="display: none;">
@@ -40,7 +45,7 @@
             <header>
                 <div class="header__block">
                     <div class="logo">
-                        <img src="./img/logo.svg" width="65" height="65">
+                        <img src="./img/logo.svg" alt="Logo" width="65" height="65">
                     </div>
                     <nav class="nav__desktop">
                         <ul>
@@ -54,15 +59,15 @@
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel" width="44"
                             height="44"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="44" height="44"></a>
                 </div>
                 <div class="menu__burger">
                     <button class="menu__button" id="nav__menu__open">
-                        <img class="burger" src="./img/burger.svg">
+                        <img class="burger" src="./img/burger.svg" alt="Mobile menu">
                     </button>
                 </div>
             </header>
@@ -98,119 +103,166 @@
     <div class="row row-alternative-color">
         <div class="container">
             <div class="speeches__body">
-                <div class="speeches__block">
+                <div class="speeches__block" data-aos="fade-left" data-aos-delay="400">
                     <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
+                        </a>
                     </div>
                     <div class="speeches__text">
                         <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
+                            Подготовка методичек<br>
+                            для Webinar Group
                         </a>
                     </div>
                 </div>
-                <div class="speeches__block">
+                <div class="speeches__block" data-aos="fade-left" data-aos-delay="400">
                     <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
-                    </div>
-                    <div class="speeches__text">
-                        <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
                         </a>
                     </div>
-                </div><div class="speeches__block">
-                    <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
-                    </div>
                     <div class="speeches__text">
                         <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
-                        </a>
-                    </div>
-                </div><div class="speeches__block">
-                    <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
-                    </div>
-                    <div class="speeches__text">
-                        <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
-                        </a>
-                    </div>
-                </div><div class="speeches__block">
-                    <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
-                    </div>
-                    <div class="speeches__text">
-                        <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
-                        </a>
-                    </div>
-                </div><div class="speeches__block">
-                    <div class="speeches__image">
-                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
-                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
-                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
-                    </div>
-                    <div class="speeches__text">
-                        <a class="speeches__link" href="./speeches-article.html">
-                        Подготовка методичек<br> 
-                        для Webinar Group
+                            Подготовка методичек<br>
+                            для Webinar Group
                         </a>
                     </div>
                 </div>
+                <div class="speeches__block" data-aos="fade-left" data-aos-delay="400">
+                    <div class="speeches__image">
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
+                        </a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                            Подготовка методичек<br>
+                            для Webinar Group
+                        </a>
+                    </div>
+                </div>
+                <div class="speeches__block" data-aos="fade-right">
+                    <div class="speeches__image">
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
+                        </a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                            Подготовка методичек<br>
+                            для Webinar Group
+                        </a>
+                    </div>
+                </div>
+                <div class="speeches__block" data-aos="fade-right">
+                    <div class="speeches__image">
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
+                        </a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                            Подготовка методичек<br>
+                            для Webinar Group
+                        </a>
+                    </div>
+                </div>
+                <div class="speeches__block" data-aos="fade-right">
+                    <div class="speeches__image">
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" alt="speeches hero image" width="360" height="260">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" alt="speeches hero image mobile" width="340" height="200">
+                        </a>
+                        <a href="./speeches-article.html">
+                            <img class="speeches__play" src="./img/play.svg" alt="play button" width="47" height="47">
+                        </a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                            Подготовка методичек<br>
+                            для Webinar Group
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 
     <div class="row">
         <div class="container">
-            <div class="contacts">
+            <div class="contacts" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube channel"
+                            width="68" height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="68"
                             height="68"></a>
-                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
-                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
-                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook" width="68"
+                            height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="68"
+                            height="68"></a>
                 </div>
                 <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
-            <div class="contacts__mobile">
+            <div class="contacts__mobile" data-aos="fade-down">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
-                                width="50" height="50"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg"
+                                alt="YouTube channel" width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" alt="Telegram" width="50"
+                                height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" alt="Facebook"
+                                alt="Facebook" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" alt="Tenchat" width="50"
+                                height="50"></a>
                     </div>
                     <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
             </div>
-            <div class="contacts__note">
+            <div class="contacts__note" data-aos="zoom-in">
                 *Meta признана экстремистской организацией
             </div>
-            <div class="contacts__note__mobile">
+            <div class="contacts__note__mobile" data-aos="zoom-in">
                 *Meta признана экстремистской<br>
                 организацией
             </div>
         </div>
     </div>
 </body>
+
 </html>
